HelloUltraviolet/Fixtures/RejectedSource/Attributes/PackedLayoutOnEnum/Expected.uv
//! Expected diagnostic metadata for the PackedLayoutOnEnum rejected-source specimen.

expectedDiagnostic("E-MOD-2454", "diagnostics.LayoutAttributeDiagnostics")
